force-app/main/default/objects/Rollup_Switch__mdt/Rollup_Switch__mdt.object-meta.xml
<CustomObject>
    <label>Rollup Switch</label>
    <pluralLabel>Rollup Switches</pluralLabel>
</CustomObject>