force-app/main/default/objects/Rollup_Switch__mdt/fields/Aggregate_Result_Field__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Result_Field__c</fullName>
    <label>Aggregate Result Field</label>
    <length>250</length>
    <type>Text</type>
</CustomField>