force-app/main/default/objects/Rollup_Switch__mdt/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <label>Child Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>