force-app/main/default/objects/Rollup_Switch__mdt/fields/Rollup_Field__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Field__c</fullName>
    <label>Rollup Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>