force-app/main/default/objects/Rollup_Switch__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUM</fullName>
                <default>true</default>
                <label>SUM</label>
            </value>
            <value>
                <fullName>AVG</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
            <value>
                <fullName>FIRST</fullName>
            </value>
            <value>
                <fullName>LAST</fullName>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>CONCAT DISTINCT</fullName>
            </value>
            <value>
                <fullName>COUNT DISTINCT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>